# VITA2PC

./: .gitignore  CMakeLists.txt  README.md  SA_ScreenStream.yml  encoder.c  encoder.h  main.c  renderer.c  utils.c  utils.h
pc/: Makefile
pc/source/: icon.h  main.c  main.cpp
psvita/: CMakeLists.txt  VITA2PC.yml  encoder.c  encoder.h  main.c  renderer.c  renderer.h  rescaler.c  rescaler.h
